Fixes issue 10: increase contrast of site name in header.

--- a/server/main/static/main/common.css
+++ b/server/main/static/main/common.css
@@ -1241,6 +1241,11 @@ body > .navbar {
     /* reset; otherwise text on navbar looks offset vs links */
     line-height: 1;
 }
+
+.navbar-default .navbar-text {
+    color: #727272;
+}
+
 .navbar-text.edd-nav-title {
     font-weight: bold;
     font-size: 18px;
